--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685480.md#1" target="_blank">【花意诗心】菊花 贞秀馨香霜下杰</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/17e52bb74bbd3a8653fea5808359211c-150x120.jpg" align ="left"></a>时光匆匆，“江涵秋影雁初飞”好像只在昨天，而今却已入冬了。寒气日重，寒风愈劲，草木变衰，众花多已飘零凋残。但菊花却盛开着，许多还都花香浓郁，鲜明耀眼。如同陶渊明在《和郭主簿（其二）》诗中的赞叹，“芳菊开林耀，青松冠岩列。怀此贞秀姿，卓为霜下杰。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:31 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687689.md#1" target="_blank">浣溪沙．叶问</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/20171129_122239-150x120.jpg" align ="left"></a> 家住寒山第几重？ 如霞彩锦炫层峰。 菊花香里共霜浓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank">古中国最美宝镜 在日本展放大唐光彩</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/23/n11675958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/f7863197b6067c36a6b3badbfb861333-150x120.jpg" align ="left"></a>大唐文化风华霞光远射世界各地，日本的“正仓院”正是收藏一道道大唐文化绚烂霞光的聚宝库。来看古中国最美的铜镜——平螺钿背宝镜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank">他们感染瘟疫 又因何死而复生</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/21/n11671824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1610090941512483-150x120.jpg" align ="left"></a>清朝大医家刘奎著作《松峰说疫》，不仅阐述了瘟疫产生的原因，对不同的病症，还讲解了具体疗法。除了阐述医理、药性、方剂之外，他又列举了一些染疫身亡，又死而复生的例子，以举证冥冥之中存在的力量，对人命运的影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11693111.md#1" target="_blank">调笑令．婆罗花开</a><br></h3> 珍惜， 珍惜， 真念金毫神笔。 戳穿红恶谎言， 真相真言善传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11692314.md#1" target="_blank">诗歌：决裂中共</a><br></h3> 世人觉醒 决裂中共向新生 香港全民反迫害......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 10:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690354.md#1" target="_blank">诗歌：回首</a><br></h3> 往昔风狂雨瓢泼 满江风浪夜如何 今朝高处回首看 一路诗韵一路歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687716.md#1" target="_blank">诗歌：感恩大法</a><br></h3>茫茫人海情缠绵，恩怨情仇迷风烟 乍惊回天梯高悬，法喜佛雨浇心田......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:39 AM			</td></tr>
